html construct + title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <%- include('./partials/header') %>
 
-<h1>Project Starter</h1>
+<section class="container">
+    <h1>Random Choice Tool</h1>
+    <p>Put your tags in the Textarea</p>
+    <p>and devide them by a comma (,)</p>
+    <textarea name="tags" id="tags" placeholder="Your tags go here..."></textarea>
+</section>
 
 <%- include('./partials/footer') %>
