styling for page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,16 @@
 <%- include('./partials/header') %>
 
 <section class="container">
+
     <h1>Random Choice Tool</h1>
     <p>Put your tags in the Textarea</p>
-    <p>and devide them by a comma (,)</p>
-    <textarea name="tags" id="tags" placeholder="Your tags go here..."></textarea>
+    <p>and devide them by a comma ( , )</p>
+
+    <textarea name="textarea" class="textarea" id="textarea" placeholder="Your tags go here..."></textarea>
+
+    <div class="tags">
+    </div>
+
 </section>
 
 <%- include('./partials/footer') %>
