--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,51 @@ body {
     margin: 0;
     overflow: hidden;
 }
+
+.container {
+    width: 500px;
+
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 20px;
+    background-color: #3a86ff;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2), 2px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+h1 {
+    margin-bottom: 30px;
+    font-size: 26px;
+    text-decoration: underline;
+    text-align: center;
+}
+
+p {
+    margin: 0;
+    letter-spacing: 1px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.textarea {
+    width: 100%;
+    height: 150px;
+    margin: 30px 0 15px 0;
+    border-radius: 6px;
+    padding: 15px;
+    font-size: 16px;
+}
+
+.tag {
+    background-color: #ffbe0b;
+    padding: 6px 15px;
+    border-radius: 50px;
+    margin: 0 5px;
+    color: #fff;
+    font-size: 18px;
+    display: inline-block;
+
+}
+
+.tag.highlight {
+    background-color: #2cbcff;
+}
