--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@ p {
     background-color: #ffbe0b;
     padding: 6px 15px;
     border-radius: 50px;
-    margin: 0 5px;
+    margin: 5px;
     color: #fff;
     font-size: 18px;
     display: inline-block;
