added id to tags

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
     <textarea name="textarea" class="textarea" id="textarea" placeholder="Your tags go here..."></textarea>
 
-    <div class="tags">
+    <div class="tags" id="tags">
     </div>
 
 </section>
